--- a/lecture/lec 31-31/lec 31-32.md
+++ b/lecture/lec 31-31/lec 31-32.md
@@ -329,122 +329,14 @@ This symmetric matrix represents the covariances between variables \(x\) and \(y
 
 ### **Step 3: Eigenvalues and Eigenvectors**
 Eigenvalues and eigenvectors are computed from the covariance matrix by solving the eigenvalue equation:
-
-\[
-\mathbf{A} \mathbf{v} = \lambda \mathbf{v}
-\]
-
-Where:
-- \(\mathbf{A}\) is the covariance matrix,
-- \(\lambda\) is an eigenvalue,
-- \(\mathbf{v}\) is the corresponding eigenvector.
-
-1. **Find the Eigenvalues**:
-   The eigenvalues are solutions to the characteristic equation:
-
-   \[
-   \det(\mathbf{A} - \lambda \mathbf{I}) = 0
-   \]
-
-   Here, \(\mathbf{I}\) is the identity matrix. For this covariance matrix:
-
-   \[
-   \det\left(
-   \begin{pmatrix}
-   0.616555556 - \lambda & 0.615444444 \\
-   0.615444444 & 0.716555556 - \lambda
-   \end{pmatrix}
-   \right) = 0
-   \]
-
-   Expanding this determinant gives a quadratic equation in \(\lambda\), which can be solved to find the eigenvalues:
-   \[
-   \lambda_1 = 0.0490833989, \quad \lambda_2 = 1.28402771
-   \]
-
-Let’s compute the eigenvalues explicitly by expanding the determinant.
-
-### Step 1: Write the eigenvalue equation
-The eigenvalues \(\lambda\) are the roots of:
-
-\[
-\det\left(\mathbf{A} - \lambda \mathbf{I}\right) = 0
-\]
-
-Substitute \(\mathbf{A}\) (the covariance matrix) and \(\mathbf{I}\) (the identity matrix):
-
-\[
-\mathbf{A} - \lambda \mathbf{I} =
-\begin{pmatrix}
-0.616555556 - \lambda & 0.615444444 \\
-0.615444444 & 0.716555556 - \lambda
-\end{pmatrix}
-\]
-
-The determinant is:
-
-\[
-\det\left(\begin{pmatrix}
-0.616555556 - \lambda & 0.615444444 \\
-0.615444444 & 0.716555556 - \lambda
-\end{pmatrix}\right) = 0
-\]
-
-### Step 2: Expand the determinant
-The determinant of a \(2 \times 2\) matrix is given by:
-
-\[
-\det\begin{pmatrix}
-a & b \\
-c & d
-\end{pmatrix} = ad - bc
-\]
-
-Substitute the elements:
-
-\[
-\det = (0.616555556 - \lambda)(0.716555556 - \lambda) - (0.615444444)(0.615444444)
-\]
-
-Expand the terms:
-
-\[
-\det = (0.616555556)(0.716555556) - (0.616555556 + 0.716555556)\lambda + \lambda^2 - (0.615444444)^2
-\]
-
-Simplify the constants:
-- \( (0.616555556)(0.716555556) = 0.441287056 \),
-- \( (0.615444444)^2 = 0.378742774 \).
-
-So:
-
-\[
-\det = 0.441287056 - (0.616555556 + 0.716555556)\lambda + \lambda^2 - 0.378742774
-\]
-
-\[
-\det = \lambda^2 - 1.333111112\lambda + (0.441287056 - 0.378742774)
-\]
-
-Simplify further:
-
-\[
-\det = \lambda^2 - 1.333111112\lambda + 0.062544282 = 0
-\]
-
-### Step 3: Solve the quadratic equation
-The quadratic equation is:
-
-\[
-\lambda^2 - 1.333111112\lambda + 0.062544282 = 0
-\]
+![alt text](image-41.png)
 
 
-### Final Eigenvalues:
-\[
-\lambda_1 = 1.28402771, \quad \lambda_2 = 0.0490833989
-\] 
+![alt text](image-42.png)
 
+![alt text](image-43.png)
+
+![alt text](image-44.png)
 
 2. **Find the Eigenvectors**:
 
@@ -464,181 +356,19 @@ Here \(\mathbf{A}\) is the covariance matrix, \(\lambda\) is an eigenvalue, and 
 
 ---
 
-### Step 1: Eigenvector for \(\lambda_1 = 1.28402771\)
-Substitute \(\lambda_1 = 1.28402771\) into \(\mathbf{A} - \lambda_1 \mathbf{I}\):
+![alt text](image-45.png)
 
-\[
-\mathbf{A} - \lambda_1 \mathbf{I} =
-\begin{pmatrix}
-0.616555556 - 1.28402771 & 0.615444444 \\
-0.615444444 & 0.716555556 - 1.28402771
-\end{pmatrix}
-\]
-
-Simplify:
-
-\[
-\mathbf{A} - \lambda_1 \mathbf{I} =
-\begin{pmatrix}
--0.667472154 & 0.615444444 \\
-0.615444444 & -0.567472154
-\end{pmatrix}
-\]
-
-We solve:
-
-\[
-\begin{pmatrix}
--0.667472154 & 0.615444444 \\
-0.615444444 & -0.567472154
-\end{pmatrix}
-\begin{pmatrix}
-v_1 \\
-v_2
-\end{pmatrix} =
-\begin{pmatrix}
-0 \\
-0
-\end{pmatrix}
-\]
-
-This gives two equations:
-1. \(-0.667472154 v_1 + 0.615444444 v_2 = 0\),
-2. \(0.615444444 v_1 - 0.567472154 v_2 = 0\).
-
-From the first equation:
-
-\[
-v_2 = \frac{0.667472154}{0.615444444} v_1 \approx 1.0843 v_1
-\]
-
-The eigenvector is:
-
-\[
-\mathbf{v}_1 =
-\begin{pmatrix}
-1 \\
-1.0843
-\end{pmatrix}
-\]
-
-Normalize \(\mathbf{v}_1\) to make it a unit vector:
-
-\[
-\|\mathbf{v}_1\| = \sqrt{1^2 + (1.0843)^2} \approx \sqrt{2.1767} \approx 1.4754
-\]
-
-\[
-\mathbf{v}_1 = \frac{1}{1.4754}
-\begin{pmatrix}
-1 \\
-1.0843
-\end{pmatrix}
-\approx
-\begin{pmatrix}
-0.7352 \\
-0.6779
-\end{pmatrix}
-\]
+![alt text](image-46.png)
 
 ---
 
-### Step 2: Eigenvector for \(\lambda_2 = 0.0490833989\)
-Substitute \(\lambda_2 = 0.0490833989\) into \(\mathbf{A} - \lambda_2 \mathbf{I}\):
+![alt text](image-47.png)
 
-\[
-\mathbf{A} - \lambda_2 \mathbf{I} =
-\begin{pmatrix}
-0.616555556 - 0.0490833989 & 0.615444444 \\
-0.615444444 & 0.716555556 - 0.0490833989
-\end{pmatrix}
-\]
-
-Simplify:
-
-\[
-\mathbf{A} - \lambda_2 \mathbf{I} =
-\begin{pmatrix}
-0.567472157 & 0.615444444 \\
-0.615444444 & 0.667472157
-\end{pmatrix}
-\]
-
-We solve:
-
-\[
-\begin{pmatrix}
-0.567472157 & 0.615444444 \\
-0.615444444 & 0.667472157
-\end{pmatrix}
-\begin{pmatrix}
-v_1 \\
-v_2
-\end{pmatrix} =
-\begin{pmatrix}
-0 \\
-0
-\end{pmatrix}
-\]
-
-This gives two equations:
-1. \(0.567472157 v_1 + 0.615444444 v_2 = 0\),
-2. \(0.615444444 v_1 + 0.667472157 v_2 = 0\).
-
-From the first equation:
-
-\[
-v_2 = -\frac{0.567472157}{0.615444444} v_1 \approx -0.9222 v_1
-\]
-
-The eigenvector is:
-
-\[
-\mathbf{v}_2 =
-\begin{pmatrix}
-1 \\
--0.9222
-\end{pmatrix}
-\]
-
-Normalize \(\mathbf{v}_2\) to make it a unit vector:
-
-\[
-\|\mathbf{v}_2\| = \sqrt{1^2 + (-0.9222)^2} \approx \sqrt{1.8504} \approx 1.3603
-\]
-
-\[
-\mathbf{v}_2 = \frac{1}{1.3603}
-\begin{pmatrix}
-1 \\
--0.9222
-\end{pmatrix}
-\approx
-\begin{pmatrix}
-0.7352 \\
--0.6779
-\end{pmatrix}
-\]
+![alt text](image-48.png)
 
 ---
 
-### Final Eigenvectors
-The unit eigenvectors are:
-
-\[
-\mathbf{v}_1 = 
-\begin{pmatrix}
-0.7352 \\
-0.6779
-\end{pmatrix}, \quad
-\mathbf{v}_2 =
-\begin{pmatrix}
-0.7352 \\
--0.6779
-\end{pmatrix}
-\]
-
----
+![alt text](image-49.png)
 
 # Principal Component Analysis (PCA) in Machine Learning
 
