--- a/lecture/lec 31-31/lec 31-32.md
+++ b/lecture/lec 31-31/lec 31-32.md
@@ -312,18 +312,7 @@ print("Accuracy:", accuracy)
 
 ---
 
-### **Step 2: Covariance Matrix**
-The covariance matrix is given as:
-
-\[
-\text{cov} =
-\begin{pmatrix}
-0.616555556 & 0.615444444 \\
-0.615444444 & 0.716555556
-\end{pmatrix}
-\]
-
-This symmetric matrix represents the covariances between variables \(x\) and \(y\). The diagonal elements are the variances (\(\text{Var}(x)\) and \(\text{Var}(y)\)), and the off-diagonal elements are the covariances (\(\text{Cov}(x, y)\)).
+![alt text](image-50.png)
 
 ---
 
