--- a/lecture/lec 31-31/lec 31-32.md
+++ b/lecture/lec 31-31/lec 31-32.md
@@ -140,6 +140,8 @@ plt.show()
 
 Below is a basic tutorial to implement the **K-Nearest Neighbors (KNN)** algorithm from scratch in Python. KNN is a simple yet effective algorithm for classification and regression tasks.
 
+https://www.youtube.com/watch?v=4b5d3muPQmA&ab_channel=StatQuestwithJoshStarmer
+
 ---
 
 # **K-Nearest Neighbors (KNN)**
@@ -344,8 +346,9 @@ Eigenvalues and eigenvectors are computed from the covariance matrix by solving 
 
 ![alt text](image-49.png)
 
-# Principal Component Analysis (PCA) in Machine Learning
+https://www.youtube.com/watch?v=FgakZw6K1QQ&pp=ygUNcGNhIHN0YXRxdWVzdA%3D%3D
 
+### Defination 
 Principal Component Analysis (PCA) is a widely used dimensionality reduction technique in machine learning. It reduces the number of features in a dataset while preserving as much information as possible. PCA achieves this by identifying new axes (principal components) that maximize variance.
 
 ---
