--- a/lecture/paper_review/p1.md
+++ b/lecture/paper_review/p1.md
@@ -190,3 +190,13 @@ Here’s a simplified explanation of the prompt design process:
 This careful design ensured the translations were accurate and used the correct language scripts.
 
 ---
+![alt text](image-2.png)
+
+![alt text](image-3.png)
+
+![alt text](image-4.png)
+---
+
+Here’s an instruction template for students to write their code for data preprocessing, cleaning, and splitting:
+
+---
